jboss-eap-multinode-singlevm-rhel8/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Linux VM user account name"
      }
    },
    "authenticationType": {
      "type": "string",
      "defaultValue": "password",
      "allowedValues": [
        "password",
        "sshPublicKey"
      ],
      "metadata": {
        "description": "Type of authentication to use on the Virtual Machine"
      }
    },
    "adminPasswordOrSSHKey": {
      "type": "securestring",
        "metadata": {
          "description": "Password or SSH key for the Virtual Machine"
        }
    },
    "jbossEAPUserName": {
      "type": "string",
      "metadata": {
        "description": "User name for JBoss EAP Manager"
      }
    },
    "jbossEAPPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Password for JBoss EAP Manager"
      }
    },
    "rhelOSLicenseType": {	
      "type": "string",	
      "defaultValue": "PAYG",	
      "allowedValues": [	
        "PAYG",		
        "BYOS"
      ],	
      "metadata": {	
        "description": "Select the of RHEL OS License Type for deploying your Virtual Machine. Please read through the guide and make sure you follow the steps mentioned under section 'Licenses, Subscriptions and Costs' if you are selecting BYOS"	
      }	
    },
    "rhsmUserName": {
      "type": "string",
      "metadata": {
        "description": "User name for Red Hat subscription Manager"
      }
    },
    "rhsmPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Password for Red Hat subscription  Manager"
      }
    },
    "rhsmPoolEAP": {
      "type": "string",
      "metadata": {
        "description": "Red Hat Subscription Manager Pool ID (Should have EAP entitlement)"
      }
    },
    "rhsmPoolRHEL": {
      "type": "string",
      "metadata": {
        "description": "Red Hat Subscription Manager Pool ID (Should have RHEL entitlement). Mandartory if you select the BYOS RHEL OS License Type"
      },
      "defaultValue": ""
    },
    "storageReplication": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_ZRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Premium_LRS"
      ]
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_DS2_v2",
      "allowedValues": [
        "Standard_DS2_v2",
        "Standard_DS3_v2",
        "Standard_DS4_v2",
        "Standard_E2S_v3",
        "Standard_E4S_v3",
        "Standard_E8S_v3",
        "Standard_F2S_v2",
        "Standard_F4S_v2",
        "Standard_F8S_v2"
      ],
      "metadata": {
        "description": "The size of the Virtual Machine"
      }
    },
    "_artifactsLocation": {
      "type": "string",
      "metadata": {
        "description": "The base URI where artifacts required by this template are located. When the template is deployed using the accompanying scripts, a private location in the subscription will be used and this value will be automatically generated"
      },
      "defaultValue": "https://raw.githubusercontent.com/SpektraSystems/redhat-mw-cloud-quickstart/master/jboss-eap-multinode-singlevm-rhel8/"
    },
    "_artifactsLocationSasToken": {
      "type": "securestring",
      "metadata": {
        "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated"
      },
      "defaultValue": ""
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources"
      }
    }
  },
  "variables": {
    "singlequote": "'",
    "nicName": "[concat(uniquestring(resourceGroup().id), '-nic')]",
    "addressPrefix": "10.0.0.0/16",
    "subnetPrefix": "10.0.0.0/24",
    "subnetName": "jbosseap-server-subnet",
    "publicIPAddressName": "jbosseap-server-pip",
    "publicIPAddressType": "Dynamic",
    "publicIPAddressDNSName" : "[concat('jbosseap-server-pip-', uniqueString(resourceGroup().id))]",
    "vmNamePAYG": "jbosseap-payg-server",
    "vmNameBYOS": "jbosseap-byos-server",
    "virtualNetworkName": "jbosseap-vnet",
    "networkSecurityGroupName": "jbosseap-nsg",
    "storageAccountName": "[concat('jbosstrg', uniqueString(resourceGroup().id))]",
    "scriptFolder": "scripts",
    "scriptFileName": "jbosseap-setup-redhat.sh",
    "bootStorageAccountName": "[concat('bootstrg', uniqueString(resourceGroup().id))]",
    "storageAccountType": "Standard_LRS",
    "linuxConfiguration": {	
      "disablePasswordAuthentication": true,	
      "ssh": {	
        "publicKeys": [	
          {	
            "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",	
            "keyData": "[parameters('adminPasswordOrSSHKey')]"	
          }	
        ]	
      }	
    }
  },
  "resources": [
    {
      "apiVersion": "2019-05-01",
      "name": "pid-91ae251c-83a1-4908-999a-76c4b889286c",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "resources": []
        }
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('bootStorageAccountName')]",
      "apiVersion": "2019-06-01",
      "location": "[parameters('location')]",
      "sku": {
          "name": "[variables('storageAccountType')]"
      },
      "kind": "Storage"
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2019-04-01",
      "name": "[variables('storageAccountName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "[parameters('storageReplication')]"
      },
      "kind": "Storage",
      "properties": {},
      "resources": [
        {
          "name": "[concat('default/', 'eapblobcontainer')]",  
          "type": "blobServices/containers",
          "apiVersion": "2018-07-01",
          "dependsOn": [
            "[variables('storageAccountName')]"
          ],
          "properties": {
            "publicAccess": "Container"
          }
        }
      ]
    },
    {
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2019-11-01",
      "name": "[variables('publicIPAddressName')]",
      "location": "[parameters('location')]",
      "properties": {
        "publicIpAllocationMethod": "[variables('publicIpAddressType')]",
        "dnsSettings": {
          "domainNameLabel": "[variables('publicIPAddressDNSName')]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-11-01",
      "name": "[variables('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "HTTP",
            "properties": {
              "priority": 300,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"80"
            }
          },
          {
            "name":"HTTPS",
            "properties":{
              "priority":320,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"443"
            }
          },
          {
            "name":"SSH",
            "properties":{
              "priority":340,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"22"
            }
          },
          {
            "name":"RDP",
            "properties":{
              "priority":360,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"3389"
            }
          },
          {
            "name": "EAPADMIN1",
            "properties": {
              "priority":380,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"9990"
            }
          },
          {
            "name": "EAPADMIN2",
            "properties": {
              "priority":400,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"10090"
            }
          },
          {
            "name": "EAPAPP1",
            "properties": {
              "priority":420,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"8080"
            }
          },
          {
            "name": "EAPAPP2",
            "properties": {
              "priority":440,
              "protocol":"Tcp",
              "access":"Allow",
              "direction":"Inbound",
              "sourceAddressPrefix":"*",
              "sourcePortRange":"*",
              "destinationAddressPrefix": "*",
              "destinationPortRange":"8180"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2019-11-01",
      "name": "[variables('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name":"[variables('subnetName')]", 
            "properties":{
              "addressPrefix":"[variables('subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-11-01",
      "name": "[variables('nicName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/publicIpAddresses/', variables('publicIPAddressName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
              "name": "ipconfig1",
              "properties": {
                  "subnet": {
                      "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]"
                  },
                  "privateIPAllocationMethod": "Dynamic",
                  "publicIpAddress": {
                      "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                  }
              }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      }
    },
    {
      "condition": "[equals(parameters('rhelOSLicenseType'),'PAYG')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-12-01",
      "name": "[variables('vmNamePAYG')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('bootStorageAccountName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
                "storageAccountType": "StandardSSD_LRS"
            }
          },
          "imageReference": {
              "publisher": "RedHat",
              "offer": "RHEL",
              "sku": "8",
              "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('vmNamePAYG')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPasswordOrSSHKey')]",
          "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[concat('https://', variables('bootStorageAccountName'), '.blob.core.windows.net')]"
          }
        }
      }
    },
    {
      "condition": "[equals(parameters('rhelOSLicenseType'),'PAYG')]",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('vmNamePAYG'),'/jbosseap-setup-extension')]",
      "apiVersion": "2019-12-01",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', variables('vmNamePAYG'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.0",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[concat(parameters('_artifactsLocation'), variables('scriptFolder'), '/', variables('scriptFileName'), parameters('_artifactsLocationSasToken'))]"
          ],
          "commandToExecute": "[concat('sh jbosseap-setup-redhat.sh',' ',parameters('jbossEAPUserName'),' ',variables('singlequote'),parameters('jbossEAPPassword'),variables('singlequote'),' ',parameters('rhelOSLicenseType'),' ',parameters('rhsmUserName'),' ',variables('singlequote'),parameters('rhsmPassword'),variables('singlequote'),' ', parameters('rhsmPoolEAP'),' ',reference(concat('Microsoft.Network/networkInterfaces/', variables('nicName'))).ipConfigurations[0].properties.privateIPAddress, [...]
        }
      }
    },
    {
      "condition": "[equals(parameters('rhelOSLicenseType'),'BYOS')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-12-01",
      "name": "[variables('vmNameBYOS')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('bootStorageAccountName'))]"
      ],
      "plan": {
          "name": "rhel-lvm8",
          "publisher": "redhat",
          "product": "rhel-byos"
        },
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
                "storageAccountType": "StandardSSD_LRS"
            }
          },
          "imageReference": {
              "publisher": "RedHat",
              "offer": "rhel-byos",
              "sku": "rhel-lvm8",
              "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('vmNameBYOS')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPasswordOrSSHKey')]",
          "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[concat('https://', variables('bootStorageAccountName'), '.blob.core.windows.net')]"
          }
        }
      }
    },
    {
      "condition": "[equals(parameters('rhelOSLicenseType'),'BYOS')]",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('vmNameBYOS'),'/jbosseap-setup-extension')]",
      "apiVersion": "2019-12-01",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', variables('vmNameBYOS'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.0",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[concat(parameters('_artifactsLocation'), variables('scriptFolder'), '/', variables('scriptFileName'), parameters('_artifactsLocationSasToken'))]"
          ],
          "commandToExecute": "[concat('sh jbosseap-setup-redhat.sh',' ',parameters('jbossEAPUserName'),' ',variables('singlequote'),parameters('jbossEAPPassword'),variables('singlequote'),' ',parameters('rhelOSLicenseType'),' ',parameters('rhsmUserName'),' ',variables('singlequote'),parameters('rhsmPassword'),variables('singlequote'),' ', parameters('rhsmPoolEAP'),' ',reference(concat('Microsoft.Network/networkInterfaces/', variables('nicName'))).ipConfigurations[0].properties.privateIPAddress, [...]
        }
      }
    }
  ],
  "outputs": {
    "vm DNS Name": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))).dnsSettings.fqdn]"
    },
    "appURLNode1": {
      "type": "string",
      "value": "[concat('http://', reference(variables('publicIPAddressName')).dnsSettings.fqdn, ':8080/eap-session-replication/')]"
    },
    "appURLNode2": {
      "type": "string",
      "value": "[concat('http://', reference(variables('publicIPAddressName')).dnsSettings.fqdn, ':8180/eap-session-replication/')]"
    },
    "adminConsole": {
      "type": "string",
      "value": "[concat('http://', reference(variables('publicIPAddressName')).dnsSettings.fqdn, ':9990')]"
    }
  }
}
